<resources>
    <string name="upgrade">版本升级</string>
    <string name="version_name">版本:</string>
    <string name="package_size">包大小:</string>
    <string name="upgrade_time">更新时间:</string>
    <string name="upgrade_feature">更新说明:</string>
    <string name="download">立即更新</string>
    <string name="install">立即安装</string>
    <string name="open_install_apk">请开启App应用安装权限</string>
    <string name="updating">更新中 %d%%</string>
</resources>
