<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/upgrade"
        android:textColor="@color/upgrade_theme"
        android:textSize="16sp" />

    <View style="@style/upgrade_line_horizontal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/versionName"
                style="@style/upgrade_text14"
                android:text="@string/version_name" />

            <TextView
                android:id="@+id/package_size"
                style="@style/upgrade_text14"
                android:layout_marginTop="3dp"
                android:text="@string/package_size" />

            <TextView
                android:id="@+id/upgrade_time"
                style="@style/upgrade_text14"
                android:layout_marginTop="3dp"
                android:text="@string/upgrade_time" />

            <TextView
                style="@style/upgrade_text14"
                android:layout_marginTop="8dp"
                android:text="@string/upgrade_feature"
                android:textColor="#333333" />

            <TextView
                android:id="@+id/upgrade_feature"
                style="@style/upgrade_text14"
                android:lineSpacingExtra="2dp"
                android:textColor="#333333"
                tools:text="1.更新的内容\n2.更新的内容" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/upgrade_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/download"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/download"
        android:textColor="@color/upgrade_theme"
        android:textSize="16sp" />

</LinearLayout>